fixes and assignment 3

--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,8 @@ verify_ssl = true
 requests = "*"
 python-dotenv = "*"
 psycopg2-binary = "*"
+pymongo = "*"
+dnspython = "*"
 
 [requires]
 python_version = "3.8"
